[tool.poetry]
name = "aiostipy"
version = "0.0.0"
description = "A python framework build on top of aiohttp with a Nestjs like architecture"
authors = ["Agustin Arce <agustinarceprincich@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[project.urls]
Repository = "https://github.com/aarcex3/aiostipy.git"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.5"
typing-extensions = "^4.12.2"
pytest-aiohttp = "^1.0.5"
opyoid = "^2.0.2"
uvloop = "^0.19.0"
msgspec = "^0.18.6"


aiohttp-swagger = {extras = ["performance"], version = "^1.0.16"}
orjson = "^3.10.7"
aiohttp-extracts = "^0.0.1a1"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-sugar = "^1.0.0"
click = "^8.1.7"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
